# FastAPI_project

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
App/: main.py  service.py
App/models/: crud.py  database.py  models.py  schemas.py
