[tool.poetry]
name = "fastapivenv"
version = "1.0"
description = "This is test task for recommendation AI platform Bewise"
authors = ["Artem Oleynikov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
requests = "^2.30.0"
sqlalchemy = "^2.0.13"
psycopg2 = "^2.9.6"
pydub = "^0.25.1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
